# bezier_segment

./: README.md
bezier_segment/: CMakeLists.txt  package.xml
bezier_segment/include/: yaml_trajectory_1.h
bezier_segment/include/bezier_segment/: bezier_quintic_segment.cpp  bezier_quintic_segment.h
bezier_segment/src/: segment_example.cpp
